# Hachimi-Edge

./: Cargo.toml  README.es.md  README.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  build.rs
.github/workflows/: create_release.yml
src/: lib.rs
src/core/: error.rs  ext.rs  game.rs  gui.rs  hachimi.rs  http.rs  interceptor.rs  ipc.rs  log.rs  mod.rs  plugin_api.rs  plurals.rs  sugoi_client.rs  template.rs  template_filters.rs  tl_repo.rs  utils.rs
src/il2cpp/: api.rs  ext.rs  mod.rs  sql.rs  symbols.rs  types.rs  utils.rs
src/il2cpp/hook/: mod.rs
src/il2cpp/hook/Cute_Core_Assembly/: Device.rs  SafetyNet.rs  mod.rs
src/il2cpp/hook/Cute_Cri_Assembly/: MovieManager.rs  mod.rs
src/il2cpp/hook/Cute_UI_Assembly/: AtlasReference.rs  mod.rs
src/il2cpp/hook/DOTween/: TweenManager.rs  mod.rs
src/il2cpp/hook/LibNative_Runtime/: mod.rs
src/il2cpp/hook/Plugins/: mod.rs
src/il2cpp/hook/UnityEngine_AssetBundleModule/: AssetBundle.rs  AssetBundleRequest.rs  mod.rs
src/il2cpp/hook/UnityEngine_CoreModule/: Application.rs  AsyncOperation.rs  Behaviour.rs  Component.rs  GameObject.rs  Graphics.rs  Material.rs  Object.rs  QualitySettings.rs  RenderTexture.rs  Resources.rs  Screen.rs  Sprite.rs  Texture.rs  Texture2D.rs  mod.rs
src/il2cpp/hook/UnityEngine_ImageConversionModule/: ImageConversion.rs  mod.rs
src/il2cpp/hook/UnityEngine_TextRenderingModule/: Font.rs  TextGenerator.rs  mod.rs
src/il2cpp/hook/UnityEngine_UI/: CanvasScaler.rs  Text.rs  mod.rs
src/il2cpp/hook/UnityEngine_UIModule/: Canvas.rs  mod.rs
src/il2cpp/hook/Unity_TextMeshPro/: TMP_FontAsset.rs  TMP_Text.rs  mod.rs
src/il2cpp/hook/mscorlib/: Byte.rs  Enum.rs  File.rs  mod.rs
src/il2cpp/hook/umamusume/: ApplicationSettingSaveLoader.rs  ButtonCommon.rs  CameraController.rs  Screen.rs  (+50 more)
src/windows/: discord.rs  game_impl.rs  hachimi_impl.rs  hook.rs  interceptor_impl.rs  log_impl.rs  main.rs  mod.rs  steamworks.rs  symbols_impl.rs  updater.rs  utils.rs  wnd_hook.rs
src/windows/gui_impl/: d3d11_backup.rs  d3d11_painter.rs  input.rs  mod.rs  render_hook.rs
src/windows/proxy/: cri_mana_vpx.rs  mod.rs  unityplayer.rs
(+25 files in other folders)
