[package]
name = "hachimi"
version = "0.21.0"
rust-version = "1.91.1"
edition = "2021"

[lib]
name = "hachimi"
crate-type = ["cdylib"]

[profile.release]
strip = true

[profile.dev]
debug = "limited"

[dependencies]
log = "0.4"
cstr = "0.2"
chrono = "0.4.42"
once_cell = "1.19"
arc-swap = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fnv = "1.0"
widestring = "1.1"
egui = { version = "0.33.2", default-features = false }
egui-scale = "0.3.0"
egui_extras = { version = "0.33.2", default-features = false, features = ["image"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
png = "0.17"
sqlparser = "0.43"
textwrap = "0.16"
atomic_float = "0.1"
blake3 = "1.5"
ureq = { version = "2.10", features = ["json"] }
size = "0.4"
thread-priority = "3.0.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
unicode-width = "0.1"
tiny_http = "0.12"
rust-i18n = "3.1"
simplelog = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windebug_logger = "0.1"
minhook = "0.5"
egui-directx11 = "0.12.1"
discord-rich-presence = "1.0.0"
pelite = "0.10"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_DataExchange",
    "Win32_System_SystemServices",
    "Win32_System_Ole",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Dxgi",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi"
]

[build-dependencies]
tauri-winres = "0.1"
cc = "1.1"

[package.metadata.tauri-winres]
ProductName = "Hachimi"
FileDescription = "Game enhancement and translation mod"

[patch.crates-io]
embed-resource = { git = "https://github.com/nabijaczleweli/rust-embed-resource.git", rev = "e98e9aa28d66b0c2ff43516b41847cac372310dd" }
